--- a/transactions.html
+++ b/transactions.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="nord">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.5/dist/full.min.css" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Title</title>
+    <title>Transactions - First Bank Canada</title>
     <link href="./dist/output.css" rel="stylesheet">
 </head>
 <body>
@@ -12,19 +12,26 @@
     <div class="navbar-start">
         <div class="dropdown">
             <label tabindex="0" class="btn btn-ghost lg:hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                     stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16"/>
+                </svg>
             </label>
             <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white" href="home.html">Home</a></li>
-                <li><a class="bg-gradient-to-r from-red-500 to-black-500 text-white" href="transactions.html">Transactions</a></li>
-                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white" href="investments.html">Investments</a></li>
-                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white" href="transferFunds.html">Transfer Funds</a></li>
+                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white"
+                       href="home.html">Home</a></li>
+                <li><a class="bg-gradient-to-r from-red-500 to-black-500 text-white" href="transactions.html">Transactions</a>
+                </li>
+                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white" href="investments.html">Investments</a>
+                </li>
+                <li><a class="hover:bg-gradient-to-r from-red-300 to-gray-200 hover:text-white"
+                       href="transferFunds.html">Transfer Funds</a></li>
             </ul>
         </div>
         <a class="btn btn-ghost text-xl text-gray-200">First Bank Canada</a>
         <div class="avatar">
             <div class="w-12 border border-gray-600 drop-shadow-lg rounded-full">
-                <img src="assets/FBC_Logo.jpg" />
+                <img src="assets/FBC_Logo.jpg"/>
             </div>
         </div>
     </div>
@@ -38,15 +45,190 @@
     </div>
     <div class="navbar-end">
         <label class="cursor-pointer grid place-items-center px-2">
-            <input type="checkbox" value="dracula" class="toggle theme-controller bg-base-content row-start-1 col-start-1 col-span-2"/>
-            <svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg>
-            <svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+            <input type="checkbox" value="dracula"
+                   class="toggle theme-controller bg-base-content row-start-1 col-start-1 col-span-2"/>
+            <svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
+                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                 stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="5"/>
+                <path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/>
+            </svg>
+            <svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
+                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                 stroke-linecap="round" stroke-linejoin="round">
+                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+            </svg>
         </label>
         <a href="index.html" class="btn btn-sm bg-red-700 border-black drop-shadow-lg text-white">Log Out</a>
     </div>
 </div>
-<div class="bg-base-100">
-    <h1 class="text-3xl font-bold underline flex justify-center">Transactions</h1>
+<div class="flex justify-center bg-base-100 pt-4">
+    <h2 class="text-xl font-bold">Transactions</h2>
+</div>
+<div class="flex justify-center py-6 px-32">
+    <div tabindex="0" class="collapse bg-base-300">
+        <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
+            Checking - #4561
+        </div>
+        <div class="collapse-content">
+            <div class="overflow-y-auto">
+                <table class="table text-lg">
+                    <tbody>
+                    <!-- row 1 -->
+                    <tr>
+                        <td>Dec 3, 2023</td>
+                        <td>Google Services</td>
+                        <td>-$24.98</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 29, 2023</td>
+                        <td>Nakatomi Plaza</td>
+                        <td>-$10,786.98</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 23, 2023</td>
+                        <td>Soap Company</td>
+                        <td>-$245.98</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 18, 2023</td>
+                        <td>Netflix</td>
+                        <td>-$28.98</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="flex justify-center py-6 px-32">
+    <div tabindex="0" class="collapse bg-base-300">
+        <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
+            Checking - #4782
+        </div>
+        <div class="collapse-content">
+            <div class="overflow-y-auto">
+                <table class="table text-lg">
+                    <tbody>
+                    <!-- row 1 -->
+                    <tr>
+                        <td>Dec 3, 2023</td>
+                        <td>Spotify</td>
+                        <td>-$24.98</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 29, 2023</td>
+                        <td>Ticket Master</td>
+                        <td>-$150.57</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 23, 2023</td>
+                        <td>Pizza hut</td>
+                        <td>-$45.98</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 18, 2023</td>
+                        <td>Pin Up Arcade</td>
+                        <td>-$28.98</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="flex justify-center py-6 px-32">
+    <div tabindex="0" class="collapse bg-base-300">
+        <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
+            Credit - #6721
+        </div>
+        <div class="collapse-content">
+            <div class="overflow-y-auto">
+                <table class="table text-lg">
+                    <tbody>
+                    <!-- row 1 -->
+                    <tr>
+                        <td>Dec 3, 2023</td>
+                        <td>Mortgage</td>
+                        <td>-$2,300.00</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 29, 2023</td>
+                        <td>Telus</td>
+                        <td>-$123.45</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 23, 2023</td>
+                        <td>Caribbean Cruise</td>
+                        <td>-$3,245.98</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 18, 2023</td>
+                        <td>The Keg</td>
+                        <td>-$228.98</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="flex justify-center py-6 px-32">
+    <div tabindex="0" class="collapse bg-base-300">
+        <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
+            Coinsquare - Investment #2240
+        </div>
+        <div class="collapse-content">
+            <div class="overflow-y-auto">
+                <table class="table text-lg">
+                    <tbody>
+                    <!-- row 1 -->
+                    <tr>
+                        <td>Dec 5, 2023</td>
+                        <td>Deposit</td>
+                        <td class="text-green-700">$21.40</td>
+                    </tr>
+                    <tr>
+                        <td>Dec 1, 2023</td>
+                        <td>Deposit</td>
+                        <td class="text-green-700">$12.90</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 28, 2023</td>
+                        <td>Deposit</td>
+                        <td class="text-green-700">$18.50</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="flex justify-center py-6 px-32 mb-16">
+    <div tabindex="0" class="collapse bg-base-300">
+        <div class="collapse-title text-xl font-bold flex justify-center bg-slate-300">
+            Questrade - Investment #4207
+        </div>
+        <div class="collapse-content">
+            <div class="overflow-y-auto">
+                <table class="table text-lg">
+                    <tbody>
+                    <!-- row 1 -->
+                    <tr>
+                        <td>Dec 6, 2023</td>
+                        <td>Deposit</td>
+                        <td class="text-green-700">$200.30</td>
+                    </tr>
+                    <tr>
+                        <td>Nov 26, 2023</td>
+                        <td>Deposit</td>
+                        <td class="text-green-700">$500.40</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 <footer class="footer flex justify-center p-4 bg-slate-900 text-neutral-content fixed bottom-0 left-0 w-full">
