--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         <a class="btn btn-ghost text-xl text-gray-200">First Bank Canada</a>
         <div class="avatar">
             <div class="w-12 border border-gray-600 drop-shadow-lg rounded-full">
-                <img src="assets/FBC_Logo.jpg"/>
+                <img src="assets/FBC_Logo.jpg" alt="FBC Logo"/>
             </div>
         </div>
     </div>
@@ -44,21 +44,6 @@
         </ul>
     </div>
     <div class="navbar-end">
-        <label class="cursor-pointer grid place-items-center px-2">
-            <input type="checkbox" value="dracula"
-                   class="toggle theme-controller bg-base-content row-start-1 col-start-1 col-span-2"/>
-            <svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
-                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="5"/>
-                <path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/>
-            </svg>
-            <svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
-                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round">
-                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-            </svg>
-        </label>
         <a href="index.html" class="btn btn-sm bg-red-700 border-black drop-shadow-lg text-white">Log Out</a>
     </div>
 </div>
@@ -70,22 +55,22 @@
     <div class="w-2/4 h-1/4 stats flex justify-center shadow-xl border rounded-md border-gray-400 bg-base-300">
         <div class="stats py-4 px-8 bg-base-300">
             <div class="stat-title font-bold text-black">Chequing Account(s)</div>
-            <div class="stat-desc">2 Accounts</div>
+            <div class="stat-desc text-gray-600">2 Accounts</div>
         </div>
         <div class="stats py-6 px-8 bg-base-300">
-            <div class="stat-desc flex justify-center">Total</div>
+            <div class="stat-desc flex justify-center text-gray-600">Total</div>
             <div class="stat-value text-xl">$2,650</div>
         </div>
     </div>
 </div>
 <div class="flex justify-center bg-base-100 py-2 px-12 hover:px-6">
     <div class="w-2/4 h-1/4 stats flex justify-center shadow-xl border rounded-md border-gray-400 bg-base-300">
-        <div class="stats py-4 px-8  bg-base-300">
+        <div class="stats py-4 px-8 bg-base-300">
             <div class="stat-title font-bold text-black">Credit Account(s)</div>
-            <div class="stat-desc">1 Account</div>
+            <div class="stat-desc text-gray-600">1 Account</div>
         </div>
         <div class="stats py-6 px-8  bg-base-300">
-            <div class="stat-desc flex justify-center">Total</div>
+            <div class="stat-desc flex justify-center text-gray-600">Total</div>
             <div class="stat-value text-xl">$4,400</div>
         </div>
     </div>
@@ -94,10 +79,10 @@
     <div class="w-2/4 h-1/4 stats flex justify-center shadow-xl border rounded-md border-gray-400 bg-base-300">
         <div class="stats py-4 px-8 bg-base-300">
             <div class="stat-title font-bold text-black">Investing Account(s)</div>
-            <div class="stat-desc">4 Accounts</div>
+            <div class="stat-desc text-gray-600">4 Accounts</div>
         </div>
         <div class="stats py-6 px-8 bg-base-300">
-            <div class="stat-desc flex justify-center">Total</div>
+            <div class="stat-desc flex justify-center text-gray-600">Total</div>
             <div class="stat-value text-xl">$189,400</div>
         </div>
     </div>
@@ -107,7 +92,7 @@
     <div class="card card-compact flex justify-center w-1/4 bg-base-200 shadow-xl border border-gray-300">
         <div class="card-body flex justify-center">
             <div class="flex justify-center">
-                <div class="radial-progress" style="--value:30;" role="progressbar">30%</div>
+                <div class="radial-progress" style="--value:30;" role="progressbar" aria-label="spending progress">30%</div>
             </div>
             <p>You are at 30% of your typical spending</p>
         </div>
@@ -116,7 +101,7 @@
     <div class="card card-compact flex justify-center w-1/4 h-1/4 bg-base-200 shadow-xl border border-gray-300">
         <div class="card-body">
             <div class="flex justify-center">
-                <div class="radial-progress" style="--value:60;" role="progressbar">60%</div>
+                <div class="radial-progress" style="--value:60;" role="progressbar" aria-label="credit progress">60%</div>
             </div>
             <p>You are at 60% of your credit payment goal</p>
         </div>
@@ -125,7 +110,7 @@
     <div class="card card-compact flex justify-center w-1/4 bg-base-200 shadow-xl border border-gray-300">
         <div class="card-body ">
             <div class="flex justify-center">
-                <div class="radial-progress" style="--value:87;" role="progressbar">87%</div>
+                <div class="radial-progress" style="--value:87;" role="progressbar" aria-label="investment progress">87%</div>
             </div>
             <p>You are at 87% of your investment goal</p>
         </div>
