--- a/transactions.html
+++ b/transactions.html
@@ -31,7 +31,7 @@
         <a class="btn btn-ghost text-xl text-gray-200">First Bank Canada</a>
         <div class="avatar">
             <div class="w-12 border border-gray-600 drop-shadow-lg rounded-full">
-                <img src="assets/FBC_Logo.jpg"/>
+                <img src="assets/FBC_Logo.jpg" alt="FBC Logo"/>
             </div>
         </div>
     </div>
@@ -44,21 +44,6 @@
         </ul>
     </div>
     <div class="navbar-end">
-        <label class="cursor-pointer grid place-items-center px-2">
-            <input type="checkbox" value="dracula"
-                   class="toggle theme-controller bg-base-content row-start-1 col-start-1 col-span-2"/>
-            <svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
-                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="5"/>
-                <path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/>
-            </svg>
-            <svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg"
-                 width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                 stroke-linecap="round" stroke-linejoin="round">
-                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-            </svg>
-        </label>
         <a href="index.html" class="btn btn-sm bg-red-700 border-black drop-shadow-lg text-white">Log Out</a>
     </div>
 </div>
